--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content = "width=device-width initial-scale=1" />
+    <meta http-equiv="X-UA-Compatable" content="IE=edge">
+
+    <title>Jodie Wiggins</title>
+    <meta name="description" content="MSc., Ph.D.">
+
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="canonical" href="https://jwiggi18.github.io/">
+</head>
+
+
+  <body>
+    <header class="site-header">
+
+  <div class="wrapper">
+
+    <a class="site-title" href="/">All Things Evolution</a>
 <h1> Why hello there</h1>
 <p> Hosted with GitHub Pages.</p>
 </body>
