--- a/index.html
+++ b/index.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
 <html>
+<title>JM Wiggins</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content = "width=device-width initial-scale=1" />
-    <meta http-equiv="X-UA-Compatable" content="IE=edge">
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button"><b>JM Wiggins</b> M.Sc., Ph.D.</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#research" class="w3-bar-item w3-button">Research</a>
+      <a href="#resources" class="w3-bar-item w3-button">Resources</a>
+      <a href="#writing" class="w3-bar-item w3-button">Writing</a>
+    </div>
+  </div>
+</div>
 
-    <title>Jodie Wiggins</title>
-    <meta name="description" content="MSc., Ph.D.">
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="img/website.logo.png" alt="DNA and a phylogeny" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+  </div>
+</header>
 
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="https://jwiggi18.github.io/">
-</head>
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
 
 
-  <body>
-    <header class="site-header">
 
-  <div class="wrapper">
+  <!-- About Section -->
+  <div class="w3-container w3-padding-32" id="about">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+    <p>I'm a researcher and educator passionate about breaking down barriers between knowledge and people.
+    </p>
+    <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
+    </p>
+    <p> This page is currently under construction. The "Research", "Resources", and "Writing" links will be up and running soon!
+    </p>
+  </div>
 
-    <a class="site-title" href="/">All Things Evolution</a>
-    
+
+
+<!-- End page content -->
+</div>
+
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
 
 </body>
 </html>
