--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
     </p>
     <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
     </p>
-    <p> This page is currently under construction. The "Research", "Resources", and "Writing" links will be up and running soon!
+    <p> This page is currently under construction. The "Research", "Resources", and "Writing" sections will be fleshed out soon!
     </p>
   </div>
+
+  <!-- Research Section -->
+<div class="w3-container w3-padding-32" id="research">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h3>
+</div>
+
+  <img src = "img/lizard1.jpg" alt = "collared lizard" style="width:750px; height:350px;margin-right:15px;">
 
 
 
