--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <a href="#home" class="w3-bar-item w3-button"><b>JM Wiggins</b> M.Sc., Ph.D.</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#research" class="w3-bar-item w3-button">Research</a>
-      <a href="#resources" class="w3-bar-item w3-button">Resources</a>
-      <a href="#writing" class="w3-bar-item w3-button">Writing</a>
+      <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+
     </div>
   </div>
 </div>
@@ -38,7 +39,7 @@
     </p>
     <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
     </p>
-    <p> This page is currently under construction. The "Research", "Resources", and "Writing" sections will be fleshed out soon!
+    <p> This page is currently under construction.
     </p>
   </div>
 
