research and teaching headers

--- a/teaching_page.html
+++ b/teaching_page.html
@@ -7,6 +7,19 @@
 <body>
 
 <!-- Teaching -->
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#Teaching" class="w3-bar-item w3-button"><b>Teaching</b></a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="./index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+
+    </div>
+  </div>
+</div>
 
 <!-- End page content -->
 </div>
