--- a/research_page.html
+++ b/research_page.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
-<html lang='en'>
-
-<head>
-  <title>Research</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="frontEnd.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="https://d3js.org/d3.v3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" charset="utf-8"></script>
-</head>
-
+<html>
+<title>Research</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-  <!-- Header -->
-<header>
-  <img src = "img/lizard1.jpg" alt = "collared lizard" style="width:900px; height:450px;margin-right:15px;">
+
+<!-- Research -->
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#Research" class="w3-bar-item w3-button"><b>Research</b></a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="./index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+
+    </div>
+  </div>
+</div>
+
+
+
+  <img src = "img/lizard1.jpg" alt = "collared lizard" style="width:800px; height:450px;margin-right:15px;">
 </header>
 </body>
+
+<!-- End page content -->
