--- a/people_page.html
+++ b/people_page.html
@@ -7,15 +7,16 @@
 <body>
 
 <!-- People -->
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#People" class="w3-bar-item w3-button"><b>People</b></a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="./index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
 
-<!-- End page content -->
+    </div>
+  </div>
 </div>
-
-
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
-</body>
-</html>
