add course names and quote

--- a/teaching_page.html
+++ b/teaching_page.html
@@ -20,9 +20,29 @@
     </div>
   </div>
 </div>
-
-<!-- End page content -->
+<hr>
+<!-- Quote -->
+<div class="w3-container w3-padding-32" id="quote">
+  <h2> "There is no knowledge that is not power" </h2>
+  <h4> - Ralph Waldo Emerson </h4>
 </div>
+
+<!-- Course List -->
+<div class="w3-container w3-padding-32" id="courses">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Courses</h3>
+  <p>In vaious semesters I teach or have taught:
+  </p>
+  <p>General Genetics
+  </p>
+  <p>Human Heredity
+  </p>
+  <p>General Physiology
+  </p>
+  <p>Evolution
+  </p>
+</div>
+<!-- End page content -->
+
 
 
 <!-- Footer -->
