add resources page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
       <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
       <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
   </div>
