--- a/research_page.html
+++ b/research_page.html
@@ -16,6 +16,7 @@
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
       <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
   </div>
