--- a/teaching_page.html
+++ b/teaching_page.html
@@ -16,6 +16,7 @@
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
       <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
   </div>
@@ -39,6 +40,13 @@
   <p>General Physiology
   </p>
   <p>Evolution
+  </p>
+</div>
+
+<!-- Teaching Resources -->
+<div class="w3-container w3-padding-32" id="courses">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
+  <p>Find a full list of teaching resources on the resources page.
   </p>
 </div>
 <!-- End page content -->
