--- a/resources_page.html
+++ b/resources_page.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-<title>People</title>
+<title>Resources</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<!-- People -->
+<!-- Resources -->
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#People" class="w3-bar-item w3-button"><b>People</b></a>
+    <a href="#Resources" class="w3-bar-item w3-button"><b>Resources</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
-      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
-      <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
 
     </div>
   </div>
+</div>
+
+<!-- Teaching Resources -->
+<div class="w3-container w3-padding-32" id="courses">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
+  <p>Links coming soon!
+  </p>
 </div>
