add img to teaching

--- a/people_page.html
+++ b/people_page.html
@@ -21,3 +21,7 @@
     </div>
   </div>
 </div>
+
+<img src = "img/jodie_teaching.jpg" alt = "Jodie Teaching" style="width:600px; height:450px;margin-right:15px;">
+
+</body>
