--- a/resources_page.html
+++ b/resources_page.html
@@ -15,6 +15,7 @@
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
       <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
 
     </div>
@@ -22,8 +23,15 @@
 </div>
 
 <!-- Teaching Resources -->
-<div class="w3-container w3-padding-32" id="courses">
+<div class="w3-container w3-padding-32" id="teaching_resources">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
+  <p>Links coming soon!
+  </p>
+</div>
+
+<!-- Diversity and Inclusion Resources -->
+<div class="w3-container w3-padding-32" id="di_resources">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Diversity and Inclusion Resources</h3>
   <p>Links coming soon!
   </p>
 </div>
