--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>JM Wiggins</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+<link rel="stylesheet" href="website.css">
+<style>
+img {
+  float: left;
+}
+</style>
+</head>
 
+<body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -20,41 +28,24 @@
     </div>
   </div>
 </div>
-
+<hr>
+<hr>
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="img/website.logo.png" alt="DNA and a phylogeny" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-  </div>
+
+
+<header>
+<p>
+  <img src="img/website_logo_narrow.png" alt="DNA and a phylogeny" style="width:250px;height:450px;margin-right:15px;">
+<hr>
+<hr>
+<hr>
+I'm a researcher and educator passionate about breaking down barriers between knowledge and people. <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.</p>This website is currently under construction.
+</p>
 </header>
-
-<!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
-
-
-
-  <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>I'm a researcher and educator passionate about breaking down barriers between knowledge and people.
-    </p>
-    <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
-    </p>
-    <p> This page is currently under construction.
-    </p>
-  </div>
-
-
-
-
-<!-- End page content -->
-</div>
-
-
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
 </body>
+
+
+
+
+
 </html>
