correct image/text spacing on homepage

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
 <title>JM Wiggins</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="website.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-img {
-  float: left;
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-row-padding img {margin-bottom: 12px}
+.bgimg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("img/website_logo_narrow.png");
+  min-height: 100%;
 }
 </style>
-</head>
-
 <body>
+
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -30,18 +35,31 @@ img {
 </div>
 <hr>
 <hr>
+
+<!-- Sidebar with image -->
+<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+  <div class="bgimg"></div>
+</nav>
+
+
+<!-- Page Content -->
+<div class="w3-main w3-padding-large" style="margin-left:40%">
+
 <!-- Header -->
-
-
-<header>
-<p>
-  <img src="img/website_logo_narrow.png" alt="DNA and a phylogeny" style="width:250px;height:450px;margin-right:15px;">
+  <header class="w3-container w3-center" style="padding:128px 16px" align = "right" id="home">
+    <h1 class="w3-jumbo" style="display:block;width:60%;margin:auto;"><b>Jodie Wiggins</b></h1>
+    <p style="display:block;width:60%;margin:auto;">I'm a researcher and educator passionate about breaking down barriers between knowledge and people. <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.</p>This website is currently under construction.
+    </p>
+    <img src="img/lizard1.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:40%;margin:auto;">
+    <img src="img/lizard1.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+    <!--<button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
+      <i class="fa fa-download"></i> Download Resume
+    </button>-->
+  </header>
 <hr>
 <hr>
 <hr>
-I'm a researcher and educator passionate about breaking down barriers between knowledge and people. <p>I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.</p>This website is currently under construction.
-</p>
-</header>
+</div>
 </body>
 
 
