research page bifurcation

--- a/research_page.html
+++ b/research_page.html
@@ -22,11 +22,31 @@
     </div>
   </div>
 </div>
+<br>
+<br>
+<br>
+<!-- Row 1 -->
+<div class="row-padding center margin-top">
+
+<!-- Lizard img -->
+  <div class="half">
+    <div class="card container">
+  <img src = "img/lizard1.jpg" alt = "collared lizard" style="width:450px; height:250px;margin-right:15px;">
+    </div>
+  </div>
+
+<!-- Research overview -->
+  <div class="half">
+    <div class="card container">
+    <h2>Much of my current work focuses on the Eastern Collared Lizard (Crotaphytus collaris)
+      <h3>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.
+    </div>
+  </div>
+
+<br>
 
 
-
-  <img src = "img/lizard1.jpg" alt = "collared lizard" style="width:800px; height:450px;margin-right:15px;">
 </header>
 </body>
-
+</div>
 <!-- End page content -->
