--- a/resources_page.html
+++ b/resources_page.html
@@ -22,17 +22,46 @@
     </div>
   </div>
 </div>
+<br>
+<br>
+<br>
+<!-- Row 1 -->
+<div class="row-padding center margin-top">
 
 <!-- Teaching Resources -->
-<div class="w3-container w3-padding-32" id="teaching_resources">
-  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
-  <p>Links coming soon!
-  </p>
-</div>
+  <div class="half">
+    <div class="card container">
+      <h3><a href="https://jwiggi18.github.io/phyloEd/"target="_blank">Phylotastic Ed</a></h3>
+      <p>my own collaboratively built suite of resources that I unabashedly put at the top of this list ;). </p>
+      <hr>
+      <h3><a href="https://education.eol.org/"target="_blank">Encyclopedia of Life</a></h3>
+      <p>lesson plans for K-12, podcasts, google earth tours, and speices cards </p>
+      <hr>
+      <h3><a href="https://www.biodiversityliteracy.com/get-involved"target="_blank">Biodiversity Literacy in Undergraduate Education</a></h3>
+      <hr>
+      <h3><a href="http://www.evolutionsociety.org/index.php?module=content&type=user&func=view&pid=25"target="_blank">Society for the Study of Evolution</a></h3>
+      <p>Landing page for SSE's "Resouces for Teachers and Students." This is a list of 20 + resources for teaching evolution including course units, lesson plans, videos, and links to programs and workshops.  </p>
+      <hr>
+      <h3><a href="http://www.ucmp-demo.berkeley.edu/education/index.php"target="_blank">University of California Museum of Paleontology</a></h3>
+      <p>hosts K-12 teacher and student resources</p>
+      <hr>
+      <h3>More updated as I can!</h3>
+    </div>
+  </div>
 
-<!-- Diversity and Inclusion Resources -->
-<div class="w3-container w3-padding-32" id="di_resources">
-  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Diversity and Inclusion Resources</h3>
-  <p>Links coming soon!
-  </p>
+<!-- Diversity Resources -->
+  <div class="half">
+    <div class="card container">
+    <h3>I'm working to identify the best way for me, as a white academic, to be an ally. As I better understand how to do that I will curate this section. For now find a few links below.
+      <hr>
+      <h3><a href="https://medium.com/@solonorthrowan/an-open-letter-to-the-eeb-community-7bd89330e554"target="_blank">An open letter to the EEB community</a></h3>
+      <p>"This letter was authored by a number of people at different institutions, and representing all career stages. We write this letter in a composite voice representing a variety of Black, Indigenous, and other People of Color (BIPOC) experiences. The letter emerged from the heat of ongoing events and an opportunity to contribute our voices to a constructive future. You may read this as an unsolicited screed, or you may read this as the cry of our desperation, but what it is not is an attempt to shame white people.""</p>
+      <hr>
+      <h3><a href="https://www.nature.com/articles/d41586-020-01883-8"target="_blank">What Black scientists want from colleagues and their institutions</a></h3>
+      <hr>
+      <h3><a href="https://nam04.safelinks.protection.outlook.com/?url=https%3A%2F%2Fdocs.google.com%2Fdocument%2Fu%2F0%2Fd%2F1alhpbjj9fuh6UT40S0Yih3GsB90fYL8O33Py8uq0XJ8%2Fmobilebasic%3Ffbclid%3DIwAR3ShtgmLNT5G_guay2tVQdR6ged8h9ZZEZhxRq0u7pMyyv2mKZ9CK_aSY8%26pli%3D1&data=02%7C01%7Crachel.hartnett%40okstate.edu%7C1ac2630c3edd472dc40008d81dc05642%7C2a69c91de8494e34a230cdf8b27e1964%7C0%7C0%7C637292059230627711&sdata=me1yjyVgkWNkDjQ%2B3N3hKfsQZDVm6PShoGANm%2FeNKA8%3D&reserved=0">Anti-racism lesson plans for educators</a></h3>
+      <h3><a href="https://jodiewiggins.wixsite.com/mysite/diversity-resources">My resources page from my old website</a></h3>
+    </div>
+  </div>
+
 </div>
