--- a/resources_page.html
+++ b/resources_page.html
@@ -31,6 +31,9 @@
 <!-- Teaching Resources -->
   <div class="half">
     <div class="card container">
+      <h3> TEACHING </h3>
+      <hr>
+      <hr>
       <h3><a href="https://jwiggi18.github.io/phyloEd/"target="_blank">Phylotastic Ed</a></h3>
       <p>my own collaboratively built suite of resources that I unabashedly put at the top of this list ;). </p>
       <hr>
@@ -52,6 +55,10 @@
 <!-- Diversity Resources -->
   <div class="half">
     <div class="card container">
+    <h3> INCLUSION AND EQUITY </h3>
+    <hr>
+    <hr>
+
     <h4>I'm working to identify the best way for me, as a white academic, to be an ally. As I better understand how to do that I will curate this section. For now find a few links below.
       <hr>
 
