--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
+<head>
 <title>JM Wiggins</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,8 +18,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   min-height: 100%;
 }
 </style>
-<body>
+</head>
 
+<body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -48,24 +50,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 <!-- Header -->
   <header class="w3-container w3-center" style="padding:128px 16px" align = "right" id="home">
-    <h1 class="w3-jumbo" style="display:block;width:60%;margin:auto;"><b>Jodie Wiggins</b></h1>
-
-    <p style="display:block;width:60%;margin:auto;font-size:large">I'm a researcher and educator passionate about breaking down barriers between knowledge and people.
-
-    <p style="display:block;width:60%;margin:auto;font-size:large">I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.</p>
-
-    <p style="display:block;width:60%;margin:auto;font-size:large"> This website is currently under construction.
+    <h1 class="w3-jumbo" style="display:block;width:100%;margin:auto;"><b>Jodie Wiggins</b></h1>
+    <br>
+    <p style="display:block;width:100%;margin:auto;font-size:large">
+      I'm a researcher and educator passionate about breaking down barriers between knowledge and people.
     </p>
 
-    <img src="img/lizard1.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:40%;margin:auto;">
-    <img src="img/lizard1.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <!--<button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-      <i class="fa fa-download"></i> Download Resume
-    </button>-->
+    <br>
+
+    <p style="display:block;width:100%;margin:auto;font-size:large">
+      I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
+    </p>
+
+    <br>
+
+    <p style="display:block;width:100%;margin:auto;font-size:large">
+      This website is currently under construction.
+    </p>
+
+
   </header>
-<hr>
-<hr>
-<hr>
+
 </div>
 </body>
 
