add genomics easy buttons to research page

--- a/research_page.html
+++ b/research_page.html
@@ -38,12 +38,23 @@
 <!-- Research overview -->
   <div class="half">
     <div class="card container">
-    <h2>Much of my current work focuses on the Eastern Collared Lizard (Crotaphytus collaris)
-      <h3>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.
+    <h2>Much of my current work focuses on the Eastern Collared Lizard (Crotaphytus collaris)</h2>
+      <h3>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.</h3>
     </div>
   </div>
 
 <br>
+
+<!-- Research overview -->
+  <div class="half">
+    <div class="card container">
+    <h2>Some genomics analysis "easy buttons"</h2>
+    <br>
+      <h3>To quickly and easily download SRA data <a href="sra-explorer.info"target="_blank">sra-explorer.info</a></h3>
+    <br>
+      <h3>To analyze genomics data without having to have tons of computational space or be able to script <a href="usegalaxy.eu"target="_blank">usegalaxy.eu</a></h3>
+    </div>
+  </div>
 
 
 </header>
