links to projects

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
-      <a href="./research_page.html" class="w3-bar-item w3-button">Research</a>
-      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./research_page.html" class="w3-bar-item w3-button">Projects</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">About Me</a>
       <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
@@ -59,13 +59,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br>
 
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
+      In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles.
     </p>
 
     <br>
 
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      This website is currently under construction.
+      I've developed an maintain several science education websites and have the priviledge to teach biology courses at Oklahoma State University. 
     </p>
 
 
@@ -74,7 +74,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </div>
 </body>
 
-
+<!-- About -->
+<hr>
+<div style="margin-left:20%" class="footer">
+  <hr>
+  <p>
+    Site is maintained by Dr. Jodie Wiggins jodie (dot) wiggins (at) okstate (dot) edu
+  </p>
+</div>
 
 
 
