--- a/research_page.html
+++ b/research_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Research</title>
+<title>Projecs</title>
 <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -12,12 +12,12 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#Research" class="w3-bar-item w3-button"><b>Research</b></a>
+    <a href="#Research" class="w3-bar-item w3-button"><b>Projects</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
       <a href="./teaching_page.html" class="w3-bar-item w3-button">Teaching</a>
-      <a href="./people_page.html" class="w3-bar-item w3-button">People</a>
+      <a href="./people_page.html" class="w3-bar-item w3-button">About Me</a>
       <a href="./resources_page.html" class="w3-bar-item w3-button">Resources</a>
 
     </div>
@@ -31,26 +31,41 @@
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
     <div class="w3-half">
         <div class="card container">
-      <h3>Much of my current work focuses on the Eastern Collared Lizard (Crotaphytus collaris)</h3>
-        <h4>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.</h4>
+      <h1>Research</h1>
+      <hr>
+      <h3>Much of my current research focuses on the Eastern Collared Lizard (Crotaphytus collaris)</h3>
+        <h5>Collared lizards are fascinating animals with vigorous mating displays, sexual dichromatism in both juveniles and adults, and a tangle of influences on their sex determination, among many other endearing characteristics. Below I breifly outline where my work fits in the study of this species and how that work informs our understanding of ecology and evolution.</h5>
         <hr>
         <h4>Sex Determination</h4>
         <hr>
-        <h4>A few years ago a research group definitively demonstrated that a lizard with obvious morphologically identifiable sex chromosomes could undergo a complete phenotypic sex change in the presence of extreme egg incubation temperatures. Not only does the bearded dragon switch sex, it does it with style. Sex-switched (non-concordant) females produce more eggs than sex-concordant females!</h4>
-        <h4>Soon after the publication of this (very exciting!) discovery a collegue (Dr. Enrique Santoyo-Brito) started asking if perhaps the unusual hatchling ratios he was seeing in his incubation experiments could be due to sex-reversal in Crotaphytus collaris and the rest is, as they say, history (or maybe future because we sooo aren't there yet). We've been chasing down the genetics of sex determination in collared lizards ever since.</h4>
-        <h4>So far, using gene dosage analysis, we've produced evidence that strongly points to and XX/XY sex determination system in C. collaris (as opposed to ZZ/ZW in bearded dragons) and hints at sex reversal in hatchlings incubated at extreme high and low temperatures. We came up against a hurdle when attempting to use Y-chromosome markers from other lizard species (they wouldn't amplify) so now we are attempting to create our own. Undergraduate researcher, Zane Pederson, is analyzing ddRAD data collected by Alex Krohn, searching for areas of the collared lizard genome that are different between males and females. We have some preliminary data that looks promising!</h4>
+        <h5>A few years ago a research group definitively demonstrated that a lizard with obvious morphologically identifiable sex chromosomes could undergo a complete phenotypic sex change in the presence of extreme egg incubation temperatures. Not only does the bearded dragon switch sex, it does it with style. Sex-switched (non-concordant) females produce more eggs than sex-concordant females!</h5>
+        <h5>Soon after the publication of this (very exciting!) discovery a collegue (Dr. Enrique Santoyo-Brito) started asking if perhaps the unusual hatchling ratios he was seeing in his incubation experiments could be due to sex-reversal in Crotaphytus collaris and the rest is, as they say, history (or maybe future because we sooo aren't there yet). We've been chasing down the genetics of sex determination in collared lizards ever since.</h5>
+        <h5>So far, using gene dosage analysis, we've produced evidence that strongly points to and XX/XY sex determination system in C. collaris (as opposed to ZZ/ZW in bearded dragons) and hints at sex reversal in hatchlings incubated at extreme high and low temperatures. We came up against a hurdle when attempting to use Y-chromosome markers from other lizard species (they wouldn't amplify) so now we are attempting to create our own. Undergraduate researcher, Zane Pederson, is analyzing ddRAD data collected by Alex Krohn, searching for areas of the collared lizard genome that are different between males and females. We have some preliminary data that looks promising!</h5>
+        <h5><a href="https://doi.org/10.1655/Herpetologica-D-19-00036">Gene dose indicates presence of sex microchromosomes in collared lizards (Crotaphytus collaris), a species with
+        termperature-influenced sex determination.</a></h5>
       </div>
     </div>
 
-<br>
+
   <div class="w3-half">
     <div class="card container">
       <div class="w3-content w3-section" style="max-width:500px">
-      <img class="mySlides" src="img/lizard1.jpg" style="width:100%">
-      <img class="mySlides" src="img/wiggins_dam2.jpg" style="width:100%">
-      <img class="mySlides" src="img/wiggins_labbench.jpg" style="width:100%">
-      <img class="mySlides" src="img/wiggins_hatchling.jpg" style="width:100%">
-      <img class="mySlides" src="img/nice_hob.jpg" style="width:100%">
+      <h1>Websites</h1>
+      <hr>
+          <h5><a href="http://historyofearth.net/">History of Earth</a></h5>
+          <hr>
+          <h5><a href="https://jwiggi18.github.io/phylogenies_as_models/">Phylogenies as Models</a></h5>
+          <hr>
+          <h5><a href="https://jwiggi18.github.io/phyloEd/">Phylotastic Ed</a></h5>
+          <hr>
+      <h1>Packages and Code</h1>
+      <hr>
+          <h5><a href="https://github.com/LunaSare/gplatesr">Gplates</a></h5>
+          <hr>
+          <h5><a href="https://github.com/phylotastic/rphylotastic">Rphylotastic</a></h5>
+
+            <hr>
+            <h5><a href="https://github.com/jwiggi18">My GitHub Repo</a></h5>
       </div>
     </div>
   </div>
@@ -64,10 +79,10 @@
   <div class="half">
     <div class="card container">
     <h2>Some genomics analysis "easy buttons"</h2>
-    <br>
-      <h3>To quickly and easily download SRA data <a href="sra-explorer.info"target="_blank">sra-explorer.info</a></h3>
-    <br>
-      <h3>To analyze genomics data without having to have tons of computational space or be able to script <a href="usegalaxy.eu"target="_blank">usegalaxy.eu</a></h3>
+    <hr>
+      <h5>To quickly and easily download SRA data <a href="sra-explorer.info"target="_blank">sra-explorer.info</a></h5>
+    <hr>
+      <h5>To analyze genomics data without having to have tons of computational space or be able to script <a href="usegalaxy.eu"target="_blank">usegalaxy.eu</a></h5>
     </div>
   </div>
 </div>
