about me additions

--- a/people_page.html
+++ b/people_page.html
@@ -11,7 +11,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#People" class="w3-bar-item w3-button"><b>People</b></a>
+    <a href="#People" class="w3-bar-item w3-button"><b>About Me</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">Home</a>
@@ -23,6 +23,22 @@
   </div>
 </div>
 
+<div style="padding:30px">
 <img src = "img/jodie_teaching.jpg" alt = "Jodie Teaching" style="width:600px; height:450px;margin-right:15px;">
 
+
+  <h5>EDUCATION</h5>
+
+  <p>PhD Integrative Biology, Oklahoma State University - 2018</p>
+  <p>MS Biology, Midwestern State University - 2010</p>
+  <p>Teacher Certification, Midwestern State University - 2006</p>
+
+  <h5>EXPERIENCE</h5>
+    
+  <p>As of Fall 2021 I have been teaching science for 14 years and researching evolution through the lense of genetics for 11.</p>
+ 
+  <h5>NARRATIVE</h5>
+    
+  <p>If you are interested an a narrative 'about me' you can find that <a href="https://jwiggi18.github.io/gengen_syllabus/instructional_team.html" target="blank">here.</a></p>
+</div>
 </body>
